@@ -3,70 +3,168 @@
   <title>nscgi</title>
 </head>
 <body bgcolor="#ffffff">
-<h2>nscgi -- CGI Interface</h2>
-$Header$<br>
-<br>
-<a href="#Theory_of_Operation">Theory of Operation</a><br>
-<a href="#Known_Issues">Known Issues</a><br>
-<a href="#Sample_Configuration">Sample Configuration</a><br>
-<br>
-<br>
-<h3><a name="Theory_of_Operation"></a>Theory of Operation</h3>
-The nscgi module provides the traditional Common Gateway Interface (CGI)
- that web servers use to run external applications.&nbsp; The nscgi module works
- well for small- to&nbsp; medium-sized applications.&nbsp; For large applications,
- it should not be used due to the severe load that running external applications
- will place on a system.&nbsp; More modern approaches use ADP, Tcl, and C libraries
- instead.<br>
-<br>
-<h3><a name="Known_Issues"></a>Known Issues</h3>
-The Common Gateway Interface is inefficient, wasteful, and slow -- and nscgi
- is no exception.&nbsp; AOLserver provides a better solution in the form of a
- robust, in-process scripting language with rich Tcl and C API's.&nbsp; The nscgi
- module should only be used for legacy applications for which no redesign
- is possible.<br>
-<br>
-<h3><a name="Sample_Configuration"></a>Sample Configuration</h3>
-<pre>#
+
+<h2>nscgi -- Common Gateway Interface (CGI) module</h2>
+
+<p>$Header$</p>
+
+<ul>
+  <li><a href="#Theory_of_Operation">Theory of Operation</a></li>
+  <li><a href="#Known_Issues">Known Issues</a></li>
+  <li><a href="#Configuration_Options">Configuration Options</a></li>
+  <li><a href="#Sample_Configuration">Sample Configuration</a></li>
+</ul>
+
+<h3><a name="Theory_of_Operation">Theory of Operation</a></h3>
+
+<p>The nscgi module provides the traditional Common Gateway Interface
+(CGI) that web servers use to run external applications.  The nscgi
+module works well for small- to medium-sized applications.  For large
+applications, it should not be used due to the severe load that running
+external applications will place on a system.  More modern approaches
+use ADP, Tcl, and C libraries instead.</p>
+
+<h3><a name="Known_Issues">Known Issues</a></h3>
+
+<p>The Common Gateway Interface is inefficient, wasteful, and slow --
+and nscgi is no exception.  AOLserver provides a better solution in the
+form of a robust, in-process scripting language with rich Tcl and C
+API's.  The nscgi module should only be used for legacy applications for
+which no redesign is possible.</p>
+
+<h3><a name="Configuration_Options">Configuration Options</a></h3>
+
+<p>The following options are available for configuring the nscgi module:</p>
+
+<table border="1">
+  <tr>
+    <th>Option</th>
+    <th>Default</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>environment</td>
+    <td>N/A</td>
+    <td>The name of the config section which contains the additional
+      environment variable names and values to set before executing the
+      CGI.  The config section is a subsection of the "ns/environment"
+      config section.</td>
+  </tr>
+  <tr>
+    <td>gethostbyaddr</td>
+    <td>false</td>
+    <td>Whether to resolve the peer IP address to its hostname when
+      setting the REMOTE_HOST environment variable.  If "false", the
+      peer IP address will be used instead.  Caution: turning this
+      option on can negatively impact performance due to the overhead of
+      having to perform a DNS look-up on every CGI request.</td>
+  </tr>
+  <tr>
+    <td>interps</td>
+    <td>N/A</td>
+    <td>The name of the config section which contains the mappings from
+      file extensions to CGI interpreters to execute the CGI with.  The
+      config section is a subsection of the "ns/interps" config
+      section.</td>
+  </tr>
+  <tr>
+    <td>limit</td>
+    <td>0</td>
+    <td>Maximum number of concurrent CGI requests to execute.  "0" means
+      unlimited.</td>
+  </tr>
+  <tr>
+    <td>map</td>
+    <td>N/A</td>
+    <td>
+      <p>Maps relative URIs or glob patterns to filesystem paths or
+      executables.  The <b>map</b> option's value is of the form:</p>
+
+      <blockquote><i>method pattern path</i></blockquote>
+
+      <ul>
+        <li><i>method</i> refers to the HTTP request method (i.e., HEAD,
+        GET, POST, etc.)</li>
+        <li><i>pattern</i> refers to either a relative URI or a glob
+        pattern to match on the HTTP request.  This is how nscgi
+        determines whether a request is a CGI request and which
+        <b>map</b> rule applies.</li>
+        <li><i>path</i> is optional, when specified, indicates either
+        the directory where the CGI executables can be found, or the
+        executable that should be used to fulfill the CGI request.</li>
+      </ul>
+
+      <p>If <i>path</i> is not specified, then the URL must refer a file
+      which is the CGI executable.  If it is specified and is a
+      directory, then the filename portion of the URL must refer to a
+      CGI executable in that directory.  Otherwise, <i>path</i> must
+      refer to a CGI executable which will handle all requests for this
+      <i>pattern</i>.</p>
+    </td>
+  </tr>
+  <tr>
+    <td>maxinput</td>
+    <td>1024000</td>
+    <td>Maximum in bytes to accept in the HTTP request.  "0" means
+      unlimited.  Mostly useful to limit the size of POST'ed data.</td>
+  </tr>
+  <tr>
+    <td>maxwait</td>
+    <td>30</td>
+    <td>Amount of time to wait in the queue when the  concurrency limit
+      has been reached.  Server will respond with a 503 Service
+      Unavailable error on timeout.  If <b>limit</b> is set to "0", this
+      setting will have no effect.</td>
+  </tr>
+  <tr>
+    <td>systemenvironment</td>
+    <td>false</td>
+    <td>Controls whether the CGI will inherit the server process's
+      environment variables or not.  Enabling this could potentially
+      leak sensitive information from the parent's environment if the
+      CGI displays its environment variables which is the behavior of
+      some common error-handling code.</td>
+  </tr>
+</table>
+
+<h3><a name="Sample_Configuration">Sample Configuration</a></h3>
+
+<pre>
+#
 # CGI interface -- nscgi
 #
 # Note: CGI is *vastly* inferior to ADP's or even built-in Tcl libraries.
 #
-ns_section "ns/server/${servername}/module/nscgi"
-ns_param &nbsp; debug &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; false
-ns_param &nbsp; gethostbyaddr &nbsp; false &nbsp; &nbsp; ;# Whether to do reverse DNS lookups
-ns_param &nbsp; limit &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 0 &nbsp; &nbsp; &nbsp; &nbsp; ;# Max number of concurrent CGI processes
-ns_param &nbsp; maxoutput &nbsp; &nbsp; &nbsp; 10240 &nbsp; &nbsp; ;# Max bytes allowed from external process
-ns_param &nbsp; buffersize &nbsp;&nbsp; &nbsp; 8192 &nbsp;&nbsp; &nbsp; ;# Buffer output from external process
-ns_param &nbsp; map \
- &nbsp;&nbsp; "GET /cgi /usr/local/cgi" &nbsp;&nbsp; &nbsp; &nbsp; ;# Where your CGI executables live (GET)
-ns_param &nbsp; map \
- &nbsp;&nbsp; "POST /cgi /usr/local/cgi" &nbsp; &nbsp; &nbsp; ;# Where your CGI executables live (POST)
-# CGI environment variable handling -- See admin guide
-ns_param &nbsp; systemenvironment false &nbsp; ;# Copies environment from nsd start shell
 
+ns_section "ns/server/${servername}/module/nscgi"
+ns_param   limit            0       ;# Max number of concurrent CGI processes
+ns_param   maxinput         1024000 ;# Max bytes allowed in HTTP request
+ns_param   maxwait          30      ;# Max seconds to wait in limit queue
+ns_param   gethostbyaddr    false   ;# Whether to do reverse DNS lookups
+
+# /cgi/foo.cgi maps to /usr/local/cgi/foo.cgi
+ns_param   map "GET /cgi /usr/local/cgi"
+ns_param   map "POST /cgi /usr/local/cgi"
+ns_param   map "HEAD /cgi /usr/local/cgi"
+
+# Any request for *.pl will be executed as CGI
+ns_param   map "GET *.pl"
+ns_param   map "POST *.pl"
+ns_param   map "HEAD *.pl"
+
+# CGI interp. and environment variable handling -- See admin guide
+ns_param   systemenvironment false  ;# Inherit environment from the nsd process
+ns_param   environment      cgi     ;# Config. section which defines
+                                    ;# additional environment variables.
+ns_param   interps          cgi     ;# Config. section which defines
+                                    ;# interpreters for CGI file extensions.
+
+ns_section "ns/environment/cgi"
+ns_param   FOO              BAR     ;# defines env. var "FOO=BAR"
+
+ns_section "ns/interps/cgi"
+ns_param   .pl              /usr/bin/perl   ;# What to use for .pl files
 </pre>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 </body>
 </html>
